--- a/admin.html
+++ b/admin.html
@@ -2,84 +2,22 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Panel de Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Panel de Administrador</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <style>
-    .panel {
-      text-align: center;
-      padding: 30px 40px 20px 40px;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      box-sizing: border-box;
-    }
-    .panel h1 {
-      font-size: 36px;
-      margin-bottom: 8px;
-    }
-    .panel p {
-      font-size: 16px;
-      margin-bottom: 25px;
-      color: #555;
-    }
-    .logout-btn {
-      margin-top: auto;
-      padding: 12px 30px;
-      background: #7494ec;
+    .btn-delete {
+      background-color: #ff4d4d;
+      color: white;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      color: white;
-      font-weight: 600;
+      padding: 6px 12px;
+      border-radius: 6px;
       cursor: pointer;
-      align-self: center;
-      width: 180px;
-      box-shadow: 0 0 10px rgba(116, 148, 236, 0.6);
-      transition: background 0.3s ease;
     }
-    .logout-btn:hover {
-      background: #5a75d6;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-      flex-grow: 1;
-      overflow-y: auto;
-      display: block;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      background: #f9f9f9;
-    }
-    thead {
-      background: #7494ec;
-      color: white;
-      position: sticky;
-      top: 0;
-      z-index: 1;
-    }
-    th, td {
-      padding: 12px 15px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-      font-size: 15px;
-    }
-    tbody tr:hover {
-      background-color: #e1eaff;
-    }
-    .container {
-      position: relative;
-      width: 850px;
-      height: 550px;
-      background: #fff;
-      margin: 20px;
-      border-radius: 30px;
-      box-shadow: 0 0 30px rgba(0, 0, 0, .2);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
+
+    .btn-delete:hover {
+      background-color: #e63946;
     }
   </style>
 </head>
@@ -87,84 +25,282 @@
   <div class="container">
     <div class="panel">
       <h1>Panel de Administración</h1>
-      <p>Listado de usuarios registrados en la plataforma</p>
-      
-      <table id="users-table">
-        <thead>
-          <tr>
-            <th>ID Usuario</th>
-            <th>Correo</th>
-            <th>Nombre</th>
-            <th>Rol</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr><td colspan="4" style="text-align:center;">Cargando usuarios...</td></tr>
-        </tbody>
-      </table>
+      <p>Gestiona usuarios y citas de Sentimentor.</p>
+
+      <div class="admin-nav">
+        <button id="nav-crear" class="active">Crear Usuario</button>
+        <button id="nav-usuarios">Ver Usuarios</button>
+        <button id="nav-citas">Ver Citas</button>
+      </div>
+
+      <div id="view-crear" class="admin-view active">
+        <h2>Crear Nuevo Usuario</h2>
+        <form id="create-user-form" class="create-user-form">
+          <label for="new-user-email">Email:</label>
+          <input type="email" id="new-user-email" placeholder="email@example.com" required>
+
+          <label for="new-user-password">Contraseña:</label>
+          <input type="password" id="new-user-password" placeholder="Contraseña (mín. 6 caracteres)" required>
+
+          <label for="new-user-name">Nombre:</label>
+          <input type="text" id="new-user-name" placeholder="Nombre completo" required>
+
+          <label for="new-user-role">Rol:</label>
+          <select id="new-user-role" required>
+            <option value="admin">Administrador</option>
+          </select>
+
+          <button type="submit" class="btn-submit">Crear Usuario</button>
+        </form>
+      </div>
+
+      <div id="view-usuarios" class="admin-view">
+        <h2>Usuarios Registrados</h2>
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th>ID de Usuario</th>
+              <th>Nombre</th>
+              <th>Email</th>
+              <th>Rol</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="users-table-body">
+            <tr><td colspan="5">Cargando usuarios...</td></tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div id="view-citas" class="admin-view">
+        <h2>Citas Agendadas</h2>
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th>Profesional</th>
+              <th>Fecha</th>
+              <th>Hora</th>
+              <th>Motivo</th>
+              <th>Usuario</th>
+              <th>Email Usuario</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="appointments-table-body">
+            <tr><td colspan="7">Cargando citas...</td></tr>
+          </tbody>
+        </table>
+      </div>
 
       <button class="logout-btn">Cerrar Sesión</button>
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyBXt4lmxH5JFO_9M2Ilf-tiRLlOtXlfOxo",
       authDomain: "sentimentor-571db.firebaseapp.com",
       projectId: "sentimentor-571db",
-      storageBucket: "sentimentor-571db.firebasestorage.app",
+      storageBucket: "sentimentor-571db.appspot.com",
       messagingSenderId: "237097457024",
       appId: "1:237097457024:web:bd7939f3cc754e67a01d65"
     };
     firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
     const db = firebase.firestore();
 
-    // Verifica si hay usuario autenticado
-    firebase.auth().onAuthStateChanged(user => {
+    auth.onAuthStateChanged(async (user) => {
       if (user) {
-        loadUsers();
+        try {
+          const doc = await db.collection("usuarios").doc(user.uid).get();
+          if (doc.exists && doc.data().rol === "admin") {
+            showView('crear');
+          } else {
+            alert("Acceso denegado. No tienes permisos de administrador.");
+            window.location.href = "index.html";
+          }
+        } catch (error) {
+          console.error("Error al verificar el rol del usuario:", error);
+          alert("Error de seguridad al verificar el usuario.");
+          window.location.href = "index.html";
+        }
       } else {
         window.location.href = "index.html";
       }
     });
 
-    async function loadUsers() {
-      const tbody = document.querySelector('#users-table tbody');
-      tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">Cargando usuarios...</td></tr>';
-      try {
-        const snapshot = await db.collection('usuarios').get();
-        if (snapshot.empty) {
-          tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">No hay usuarios registrados.</td></tr>';
-          return;
-        }
-        tbody.innerHTML = '';
-        snapshot.forEach(doc => {
-          const user = doc.data();
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td>${doc.id}</td>
-            <td>${user.correo || '-'}</td>
-            <td>${user.nombre || '-'}</td>
-            <td>${user.rol || '-'}</td>
-          `;
-          tbody.appendChild(tr);
-        });
-      } catch (error) {
-        console.error("Error cargando usuarios:", error);
-        tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">Error cargando usuarios.</td></tr>';
+    document.querySelector('.logout-btn').addEventListener('click', async () => {
+      await auth.signOut();
+      window.location.href = "index.html";
+    });
+
+    const navButtons = document.querySelectorAll('.admin-nav button');
+    const adminViews = document.querySelectorAll('.admin-view');
+
+    function showView(viewId) {
+      navButtons.forEach(btn => btn.classList.remove('active'));
+      adminViews.forEach(view => view.classList.remove('active'));
+
+      const activeButton = document.getElementById(`nav-${viewId}`);
+      const activeView = document.getElementById(`view-${viewId}`);
+      if (activeButton) activeButton.classList.add('active');
+      if (activeView) activeView.classList.add('active');
+
+      if (viewId === 'usuarios') {
+        loadUsers();
+      } else if (viewId === 'citas') {
+        loadAppointments();
       }
     }
 
-    // Logout
-    document.querySelector('.logout-btn').addEventListener('click', async () => {
-      await firebase.auth().signOut();
-      window.location.href = "index.html";
+    navButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        const viewId = button.id.replace('nav-', '');
+        showView(viewId);
+      });
     });
+
+    document.getElementById('create-user-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('new-user-email').value;
+      const password = document.getElementById('new-user-password').value;
+      const name = document.getElementById('new-user-name').value;
+      const role = document.getElementById('new-user-role').value;
+
+      try {
+        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+        const uid = userCredential.user.uid;
+
+        await db.collection('usuarios').doc(uid).set({
+          nombre: name,
+          correo: email,
+          rol: role
+        });
+
+        alert(`Usuario ${name} (${email}) con rol ${role} creado exitosamente.`);
+        document.getElementById('create-user-form').reset();
+      } catch (error) {
+        if (error.code === 'auth/email-already-in-use') {
+          alert('Error: El email ya está en uso.');
+        } else if (error.code === 'auth/weak-password') {
+          alert('Error: La contraseña es muy débil.');
+        } else {
+          console.error("Error al crear usuario: ", error);
+          alert('Error: ' + error.message);
+        }
+      }
+    });
+
+    async function loadUsers() {
+      const usersTableBody = document.getElementById('users-table-body');
+      usersTableBody.innerHTML = '<tr><td colspan="5">Cargando usuarios...</td></tr>';
+
+      try {
+        const usersSnapshot = await db.collection('usuarios').get();
+        usersTableBody.innerHTML = '';
+
+        if (usersSnapshot.empty) {
+          usersTableBody.innerHTML = '<tr><td colspan="5">No hay usuarios registrados.</td></tr>';
+          return;
+        }
+
+        usersSnapshot.forEach(doc => {
+          const userData = doc.data();
+          const row = usersTableBody.insertRow();
+          row.insertCell(0).textContent = doc.id;
+          row.insertCell(1).textContent = userData.nombre || 'N/A';
+          row.insertCell(2).textContent = userData.correo || 'N/A';
+          row.insertCell(3).textContent = userData.rol || 'cliente';
+
+          const deleteCell = row.insertCell(4);
+          const deleteBtn = document.createElement('button');
+          deleteBtn.textContent = 'Eliminar';
+          deleteBtn.classList.add('btn-delete');
+          deleteBtn.onclick = async () => {
+            if (confirm(`¿Eliminar al usuario ${userData.nombre}?`)) {
+              await db.collection('usuarios').doc(doc.id).delete();
+              alert('Usuario eliminado.');
+              loadUsers();
+            }
+          };
+          deleteCell.appendChild(deleteBtn);
+        });
+      } catch (error) {
+        console.error("Error al cargar usuarios: ", error);
+        usersTableBody.innerHTML = `<tr><td colspan="5">Error: ${error.message}</td></tr>`;
+      }
+    }
+
+    async function loadAppointments() {
+      const appointmentsTableBody = document.getElementById('appointments-table-body');
+      appointmentsTableBody.innerHTML = '<tr><td colspan="7">Cargando citas...</td></tr>';
+
+      try {
+        const appointmentsSnapshot = await db.collection('citas').orderBy('timestamp', 'desc').get();
+        appointmentsTableBody.innerHTML = '';
+
+        if (appointmentsSnapshot.empty) {
+          appointmentsTableBody.innerHTML = '<tr><td colspan="7">No hay citas agendadas.</td></tr>';
+          return;
+        }
+
+        const userPromises = [];
+
+        appointmentsSnapshot.forEach(doc => {
+          const data = doc.data();
+          const row = appointmentsTableBody.insertRow();
+          row.insertCell(0).textContent = data.profesional || 'N/A';
+          row.insertCell(1).textContent = data.date || 'N/A';
+          row.insertCell(2).textContent = data.time || 'N/A';
+          row.insertCell(3).textContent = data.reason || 'N/A';
+          row.insertCell(4).textContent = data.userName || 'N/A';
+
+          const emailCell = row.insertCell(5);
+          emailCell.id = `user-email-${doc.id}`;
+          emailCell.textContent = 'Cargando...';
+
+          const deleteCell = row.insertCell(6);
+          const deleteBtn = document.createElement('button');
+          deleteBtn.textContent = 'Eliminar';
+          deleteBtn.classList.add('btn-delete');
+          deleteBtn.onclick = async () => {
+            if (confirm('¿Eliminar esta cita?')) {
+              await db.collection('citas').doc(doc.id).delete();
+              alert('Cita eliminada.');
+              loadAppointments();
+            }
+          };
+          deleteCell.appendChild(deleteBtn);
+
+          if (data.userId) {
+            userPromises.push(
+              db.collection('usuarios').doc(data.userId).get()
+                .then(userDoc => {
+                  const email = userDoc.exists ? (userDoc.data().correo || 'No disponible') : 'No encontrado';
+                  return { docId: doc.id, email };
+                }).catch(() => ({ docId: doc.id, email: 'Error' }))
+            );
+          } else {
+            emailCell.textContent = 'ID no disponible';
+          }
+        });
+
+        const results = await Promise.all(userPromises);
+        results.forEach(r => {
+          const cell = document.getElementById(`user-email-${r.docId}`);
+          if (cell) cell.textContent = r.email;
+        });
+
+      } catch (error) {
+        console.error("Error al cargar citas: ", error);
+        appointmentsTableBody.innerHTML = `<tr><td colspan="7">Error: ${error.message}</td></tr>`;
+      }
+    }
   </script>
 </body>
 </html>
-
