--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <div class="input-box">
                     <input type="password" id="login-pass" placeholder="Contraseña" required>
                     <i class='bx bxs-lock-alt'></i>
+                    </div>
+                
+                </div>
                     
                 <button type="button" id="login-btn" class="btn">Inicia Sesión</button>
                 <p>o inicia sesión con Google</p>
