--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                     <input type="password" id="login-pass" placeholder="Contraseña" required>
                     <i class='bx bxs-lock-alt'></i>
                     </div>
-                
+                  <div class="forgot-link">
                 </div>
-                    
                 <button type="button" id="login-btn" class="btn">Inicia Sesión</button>
                 <p>o inicia sesión con Google</p>
                 <div class="social-icons">
