--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
   <title>Panel de Administrador</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     .btn-delete {
       background-color: #ff4d4d;
@@ -19,6 +20,25 @@
     .btn-delete:hover {
       background-color: #e63946;
     }
+
+    .charts-container {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 20px;
+    }
+
+    .chart {
+      width: 45%;
+      text-align: center;
+    }
+
+    .chart canvas {
+      max-width: 100%;
+    }
+
+    .stats-text {
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -31,6 +51,22 @@
         <button id="nav-crear" class="active">Crear Usuario</button>
         <button id="nav-usuarios">Ver Usuarios</button>
         <button id="nav-citas">Ver Citas</button>
+        <button id="nav-estadisticas">Estadísticas</button> <!-- Nueva pestaña -->
+      </div>
+
+      <div id="view-estadisticas" class="admin-view">
+        <h2>Estadísticas</h2>
+
+        <div class="charts-container">
+          <div class="chart">
+            <canvas id="usersChart"></canvas>
+            <p id="userStats" class="stats-text"></p>
+          </div>
+          <div class="chart">
+            <canvas id="appointmentsChart"></canvas>
+            <p id="appointmentsStats" class="stats-text"></p>
+          </div>
+        </div>
       </div>
 
       <div id="view-crear" class="admin-view active">
@@ -59,7 +95,6 @@
         <table class="data-table">
           <thead>
             <tr>
-              <th>ID de Usuario</th>
               <th>Nombre</th>
               <th>Email</th>
               <th>Rol</th>
@@ -82,7 +117,7 @@
               <th>Hora</th>
               <th>Motivo</th>
               <th>Usuario</th>
-              <th>Email Usuario</th>
+              <th>Prioridad</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -154,6 +189,8 @@
         loadUsers();
       } else if (viewId === 'citas') {
         loadAppointments();
+      } else if (viewId === 'estadisticas') {
+        loadStatistics();
       }
     }
 
@@ -212,12 +249,11 @@
         usersSnapshot.forEach(doc => {
           const userData = doc.data();
           const row = usersTableBody.insertRow();
-          row.insertCell(0).textContent = doc.id;
-          row.insertCell(1).textContent = userData.nombre || 'N/A';
-          row.insertCell(2).textContent = userData.correo || 'N/A';
-          row.insertCell(3).textContent = userData.rol || 'cliente';
+          row.insertCell(0).textContent = userData.nombre || 'N/A';
+          row.insertCell(1).textContent = userData.correo || 'N/A';
+          row.insertCell(2).textContent = userData.rol || 'cliente';
 
-          const deleteCell = row.insertCell(4);
+          const deleteCell = row.insertCell(3);
           const deleteBtn = document.createElement('button');
           deleteBtn.textContent = 'Eliminar';
           deleteBtn.classList.add('btn-delete');
@@ -259,10 +295,15 @@
           row.insertCell(2).textContent = data.time || 'N/A';
           row.insertCell(3).textContent = data.reason || 'N/A';
           row.insertCell(4).textContent = data.userName || 'N/A';
+          const priorityCell = row.insertCell(5);
+      const priorityText = data.priority || 'N/A';
+      priorityCell.textContent = priorityText;
 
-          const emailCell = row.insertCell(5);
-          emailCell.id = `user-email-${doc.id}`;
-          emailCell.textContent = 'Cargando...';
+      if (priorityText.toLowerCase() === 'alta') {
+        priorityCell.style.color = 'red'; // Cambia a rojo si la prioridad es alta
+      } else if (priorityText.toLowerCase() === 'normal') {
+        priorityCell.style.color = ''; // Sin color si la prioridad es normal
+      }
 
           const deleteCell = row.insertCell(6);
           const deleteBtn = document.createElement('button');
@@ -299,6 +340,108 @@
       } catch (error) {
         console.error("Error al cargar citas: ", error);
         appointmentsTableBody.innerHTML = `<tr><td colspan="7">Error: ${error.message}</td></tr>`;
+      }
+    }
+
+    // Cargar estadísticas
+    async function loadStatistics() {
+      try {
+        const usersSnapshot = await db.collection('usuarios').get();
+        const citasSnapshot = await db.collection('citas').get();
+
+        let admins = 0, clients = 0;
+        usersSnapshot.forEach(doc => {
+          const userData = doc.data();
+          if (userData.rol === 'admin') {
+            admins++;
+          } else {
+            clients++;
+          }
+        });
+
+        let highPriority = 0, normalPriority = 0;
+        citasSnapshot.forEach(doc => {
+          const citaData = doc.data();
+          if (citaData.priority === 'alta') {
+            highPriority++;
+          } else {
+            normalPriority++;
+          }
+        });
+
+        // Datos de gráficos de usuarios
+        const userData = {
+          labels: ['Administrador', 'Cliente'],
+          datasets: [{
+            data: [admins, clients],
+            backgroundColor: ['green', 'blue'],
+          }]
+        };
+        const userOptions = {
+          responsive: true,
+          plugins: {
+            legend: {
+              position: 'top',
+            },
+            tooltip: {
+              callbacks: {
+                label: function(tooltipItem) {
+                  const total = admins + clients;
+                  const percentage = (tooltipItem.raw / total * 100).toFixed(2);
+                  return `${tooltipItem.label}: ${tooltipItem.raw} (${percentage}%)`;
+                }
+              }
+            }
+          }
+        };
+
+        const usersChart = new Chart(document.getElementById('usersChart'), {
+          type: 'pie',
+          data: userData,
+          options: userOptions
+        });
+
+        // Mostrar estadísticas de usuarios
+        const userStatsText = `Total de Usuarios: ${admins + clients} (${(100).toFixed(2)}%)`;
+        document.getElementById('userStats').innerText = userStatsText;
+
+        // Datos de gráficos de citas
+        const appointmentsData = {
+          labels: ['Alta', 'Normal'],
+          datasets: [{
+            data: [highPriority, normalPriority],
+            backgroundColor: ['red', 'green'],
+          }]
+        };
+        const appointmentsOptions = {
+          responsive: true,
+          plugins: {
+            legend: {
+              position: 'top',
+            },
+            tooltip: {
+              callbacks: {
+                label: function(tooltipItem) {
+                  const total = highPriority + normalPriority;
+                  const percentage = (tooltipItem.raw / total * 100).toFixed(2);
+                  return `${tooltipItem.label}: ${tooltipItem.raw} (${percentage}%)`;
+                }
+              }
+            }
+          }
+        };
+
+        const appointmentsChart = new Chart(document.getElementById('appointmentsChart'), {
+          type: 'pie',
+          data: appointmentsData,
+          options: appointmentsOptions
+        });
+
+        // Mostrar estadísticas de citas
+        const appointmentsStatsText = `Total de Citas: ${highPriority + normalPriority} (${(100).toFixed(2)}%)`;
+        document.getElementById('appointmentsStats').innerText = appointmentsStatsText;
+      } catch (error) {
+        console.error("Error al cargar estadísticas: ", error);
       }
     }
   </script>
