--- a/admin.html
+++ b/admin.html
@@ -49,9 +49,9 @@
 
       <div class="admin-nav">
         <button id="nav-crear" class="active">Crear Usuario</button>
-        <button id="nav-usuarios">Ver Usuarios</button>
-        <button id="nav-citas">Ver Citas</button>
-        <button id="nav-estadisticas">Estadísticas</button> <!-- Nueva pestaña -->
+        <button id="nav-usuarios">Usuarios</button>
+        <button id="nav-citas">Citas</button>
+        <button id="nav-estadisticas">Datos</button> <!-- Nueva pestaña -->
       </div>
 
       <div id="view-estadisticas" class="admin-view">
