--- a/cliente.html
+++ b/cliente.html
@@ -317,16 +317,12 @@
 
     async function getChatGPTResponse(message) {
         const prompt = `Eres Sentimentor, un asistente emocional para estudiantes universitarios de la Universidad Peruana Los Andes. Responde de manera empática y comprensiva, pero también de forma corta y directa. Limita tus respuestas a un máximo de 2 oraciones, evitando respuestas largas. Al finalizar el chat o Si el estudiante menciona pensamientos preocupantes, sugiérele que agende una cita con un profesional de la universidad. Aquí está el mensaje del estudiante: "${message}"`;
-        const response = await fetch('https://api.openai.com/v1/chat/completions', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'Authorization': `Bearer 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`
-            },
-            body: JSON.stringify({
-                model: "gpt-3.5-turbo",
-                messages: [{ role: "user", content: prompt }],
-                max_tokens: 100, // Limitar la cantidad de tokens generados para respuestas más cortas
+         const response = await fetch('/chat', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({ message })
+});
+                
             })
         });
 
