--- a/cliente.html
+++ b/cliente.html
@@ -316,18 +316,22 @@
     });
 
     async function getChatGPTResponse(message) {
-  const prompt = `Eres Sentimentor, un asistente emocional para estudiantes universitarios de la Universidad Peruana Los Andes. Responde de manera empática y comprensiva, pero también de forma corta y directa. Limita tus respuestas a un máximo de 2 oraciones, evitando respuestas largas. Al finalizar el chat o si el estudiante menciona pensamientos preocupantes, sugiérele que agende una cita con un profesional de la universidad. Aquí está el mensaje del estudiante: "${message}"`;
+    const response = await fetch('/api/chat', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ message })
+    });
 
-  const response = await fetch('/chat', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ message })
-  });
+    if (!response.ok) {
+        throw new Error('Error en la API de ChatGPT');
+    }
 
-  const data = await response.json();
-  return data.content;
+    const data = await response.json();
+    return data; // Asegúrate de que esto coincida con la estructura de tu respuesta
 }
-    
+
     function typeMessage(text, sender) {
         const container = document.getElementById('chatbox-messages');
         const msg = document.createElement('div');
